<resources>
    <string name="app_name">CinemaQ</string>
    <string name="logo_name">CinemaQ</string>
    <string name="tv_type">tv</string>
    <string name="movies_type">movies</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="icon_runtime">icon runtime</string>
    <string name="button_back_activity">button back activity</string>
    <string name="icon_score">icon score</string>
    <string name="icon_vote_count">icon vote count</string>
    <string name="icon_date">icon date</string>
    <string name="genres">Genres</string>
    <string name="image_small_poster">image small poster</string>
    <string name="image_big_poster">image big poster</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="value_genres">Action, Animation, Adventure</string>
    <string name="value_cote_count">3453</string>
    <string name="value_score">8.9898</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>